Positioned elements in hero and navigation

--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ html, body {
 }
 
 /*navigation*/
+
+nav {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 9999;
+	width: 100%;
+	height: 50px;
+}
 nav > div > *,
 nav li {
 	display: inline-block;
@@ -38,6 +47,11 @@ nav ul {
 	text-align: center;
 }
 
+.hero-text {
+	width: 100%;
+	margin: 0 auto;
+	/*vertical-align: middle;*/
+}
 
 /*general*/
 .spacing {
@@ -47,6 +61,12 @@ nav ul {
 	width: 960px;
 }
 
+.flex {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .clearflix:after {
   content: "";
   display: table;
