--- a/style.css
+++ b/style.css
@@ -11,51 +11,8 @@ html, body {
    margin: 0;
    padding: 0;
 }
-
-/*navigation*/
-
-nav {
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 9999;
-	width: 100%;
-	height: 50px;
-}
-nav > div > *,
-nav li {
-	display: inline-block;
-}
-
-nav .logo {
-	float: left;
-}
-
-nav ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	float: right;
-}
-
-.hero {
-	height: 100%;
-	background-color: yellow;
-}
-
-.hero h1 {
-	text-align: center;
-}
-
-.hero-text {
-	width: 100%;
-	margin: 0 auto;
-	/*vertical-align: middle;*/
-}
-
 /*general*/
 .spacing {
-	background-color: green;
 	height: 100%;
 	margin: 0 auto;
 	width: 960px;
@@ -72,3 +29,79 @@ nav ul {
   display: table;
   clear: both;
 }
+
+/*navigation*/
+
+nav {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 9999;
+	width: 100%;
+	height: 50px;
+}
+
+nav > div > *,
+nav li {
+	display: inline-block;
+}
+
+nav > div > * {
+	margin: 10px;
+}
+
+nav > div {
+	margin: 10px;
+}
+
+nav .logo {
+	float: left;
+}
+
+nav ul {
+	list-style-type: none;
+	padding: 0;
+	float: right;
+}
+
+.spacing--nav {
+	margin-top: 15px;
+	height: 35px;
+}
+
+.hero {
+	height: 100%;
+}
+
+.hero h1 {
+	text-align: center;
+}
+
+.hero-text {
+	width: 100%;
+	margin: 0 auto;
+}
+
+/*description*/
+
+.spacing--description {
+	padding: 5% 0;
+}
+
+.spacing--description > p {
+	font-size: 1.5em;
+}
+.description {
+	background-color: grey;
+}
+
+.expanded-description p {
+	display: inline-block;
+	width: 44%;
+}
+
+.expanded-description p:first-child {
+	margin-right: 10%
+}
+
+/*my work*/
