--- a/style.css
+++ b/style.css
@@ -10,12 +10,27 @@ html, body {
    width: 100%;
    margin: 0;
    padding: 0;
+   font-family: 'Merriweather Sans', sans-serif;
 }
 /*general*/
 .spacing {
 	height: 100%;
 	margin: 0 auto;
 	width: 960px;
+}
+
+.hero {
+	font-family: 'Lato', sans-serif;
+	background-color: #c8374d;
+	color: white;
+}
+
+.spacing-sections {
+	padding: 5% 0;
+}
+
+.spacing h2 {
+	text-align: center;
 }
 
 .flex {
@@ -30,6 +45,15 @@ html, body {
   clear: both;
 }
 
+.columns > * {
+	display: inline-block;
+	width: 44%;
+}
+
+.columns p:first-child {
+	margin-right: 10%
+}
+
 /*navigation*/
 
 nav {
@@ -39,11 +63,13 @@ nav {
 	z-index: 9999;
 	width: 100%;
 	height: 50px;
+	color: white;
 }
 
 nav > div > *,
 nav li {
 	display: inline-block;
+	margin-left: 10px;
 }
 
 nav > div > * {
@@ -75,6 +101,8 @@ nav ul {
 
 .hero h1 {
 	text-align: center;
+	font-size: 80px;
+	line-height: 50px;
 }
 
 .hero-text {
@@ -84,24 +112,139 @@ nav ul {
 
 /*description*/
 
-.spacing--description {
-	padding: 5% 0;
-}
-
 .spacing--description > p {
 	font-size: 1.5em;
 }
-.description {
-	background-color: grey;
+
+
+.spacing-sections > p:first-child {
+	font-size: 1.5em;
+	text-align: center;
+	line-height: 1.5em;
 }
 
-.expanded-description p {
-	display: inline-block;
-	width: 44%;
+/*.description {
+	background-color: #f9f9f9;
+}*/
+.portfolio h2 {
+	font-family: 'Lato', sans-serif;
 }
-
-.expanded-description p:first-child {
-	margin-right: 10%
+.columns p {
+	line-height: 1.7em;
 }
 
 /*my work*/
+/*.portfolio {
+	background-color: #f9f9f9;
+}*/
+
+.columns--portfolio *{
+	vertical-align: top;
+}
+
+.columns p {
+	font-weight: 300;
+}
+
+.columns {
+	margin-top: 15px;
+}
+
+.columns--portfolio p:first-child {
+	margin-top: 0;
+}
+
+.portfolio h2 {
+	text-align: left;
+}
+
+.columns h3 {
+	font-family: 'Lato', sans-serif;
+	margin-top: 0;
+	margin-bottom: 3px;
+	line-height: 1;
+}
+
+.spacing-sections {
+	width: 1000px;
+}
+/*contact me*/
+.contact {
+	text-align: center;
+}
+
+.contact span {
+	display: block;
+}
+
+/*footer*/
+footer ul {
+	list-style-type: none;
+}
+
+footer ul li {
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+}
+
+footer > * {
+	display: inline-block;
+}
+
+/*animation*/
+.animation {
+    animation-duration: 0.8s;
+    animation-fill-mode: both;
+}
+
+.fade-up {
+	animation-name: fadeInUp;
+}
+
+.fade-left {
+	animation-delay: 0.8s;
+	animation-name: fadeInLeft;
+}
+
+.fade-right {
+	animation-delay: 0.8s;
+	animation-name: fadeInRight;
+}
+
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+	transform: translateY(20px);
+  }
+
+  100% {
+	opacity: 1;
+	transform: translateY(0px);
+  }
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+	transform: translateX(20px);
+  }
+
+  100% {
+	opacity: 1;
+	transform: translateX(0px);
+  }
+}
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+	transform: translateX(-20px);
+  }
+
+  100% {
+	opacity: 1;
+	transform: translateX(0px);
+  }
+}
