--- a/style.css
+++ b/style.css
@@ -12,11 +12,16 @@ html, body {
    padding: 0;
    font-family: 'Merriweather Sans', sans-serif;
 }
+
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+}
 /*general*/
 .spacing {
 	height: 100%;
-	margin: 0 auto;
-	width: 960px;
+	margin: 0 10%;
 }
 
 .hero {
@@ -165,9 +170,6 @@ nav ul {
 	line-height: 1;
 }
 
-.spacing-sections {
-	width: 1000px;
-}
 /*contact me*/
 .contact {
 	text-align: center;
@@ -216,7 +218,7 @@ footer > * {
 @keyframes fadeInUp {
   0% {
     opacity: 0;
-	transform: translateY(20px);
+	transform: translateY(30px);
   }
 
   100% {
@@ -228,7 +230,7 @@ footer > * {
 @keyframes fadeInLeft {
   0% {
     opacity: 0;
-	transform: translateX(20px);
+	transform: translateX(30px);
   }
 
   100% {
@@ -240,11 +242,30 @@ footer > * {
 @keyframes fadeInRight {
   0% {
     opacity: 0;
-	transform: translateX(-20px);
+	transform: translateX(-30px);
   }
 
   100% {
 	opacity: 1;
 	transform: translateX(0px);
+  }
+}
+
+
+@media (max-width: 900px) {
+  .columns > * {
+    display: block;
+    width: 90%;
+    margin: 10px 5%;
+  }
+
+  .portfolio h2 {
+  	margin-left: 5%;
+  }
+}
+
+@media (max-width: 400px) {
+  .hero h2 {
+    font-size: 50px;
   }
 }
