--- a/style.css
+++ b/style.css
@@ -62,32 +62,37 @@ img {
 
 /*navigation*/
 
-nav {
+header {
+	width: 100%;
 	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: 9999;
-	width: 100%;
 	height: 60px;
 	color: white;
 	background-color: #16a085;
 }
 
-nav > div > *,
+nav {
+	float: right;
+}
+
+ul {
+	margin: 0;
+	padding: 0;
+}
+
+header > div > *,
 nav li {
 	display: inline-block;
 	margin-left: 10px;
 }
 
-nav > div > * {
-	margin: 10px 0;
+header > div > * {
+	margin-top: 20px;
 }
 
-nav > div {
-	margin: 10px;
-}
-
-nav .logo {
+.logo {
 	float: left;
 }
 
@@ -97,9 +102,7 @@ nav ul {
 	float: right;
 }
 
-.spacing--nav {
-	margin-top: 10px;
-}
+/*hero*/
 
 .hero {
 	height: 100%;
