Moved files to flask app

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,9 @@
 	<link href='https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,300|Lato:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-	<script src="js/responsive-nav.js"></script>
-	<script src="main.js"></script>
-	<link rel="stylesheet" href="css/fixed-responsive-nav.css">
-	<link rel="stylesheet" href="css/style.css">
+	<script src="/static/js/responsive-nav.js"></script>
+	<link rel="stylesheet" href="/static/css/fixed-responsive-nav.css">
+	<link rel="stylesheet" href="/static/css/style.css">
 	<title>Stella Odewumi</title>
 </head>
 <body>
@@ -67,7 +66,7 @@
 
 			<div class="columns columns--portfolio">
 				<div>
-					<img src="img/careers-yelp.png" alt="Screenshot of www.yelp.com/careers">
+					<img src="../static/img/careers-yelp.png" alt="Screenshot of www.yelp.com/careers">
 				</div>
 
 				<div>
@@ -86,7 +85,7 @@
 
 			<div class="columns columns--portfolio">
 				<div>
-					<img src="img/gutenhub.gif" alt="Screenshot gif of Gutenhub website">
+					<img src="../static/img/gutenhub.gif" alt="Screenshot gif of Gutenhub website">
 				</div>
 
 				<div>
@@ -106,7 +105,7 @@
 
 			<div class="columns columns--portfolio">
 				<div>
-					<img src="img/lunchship.png">
+					<img src="../static/img/lunchship.png">
 				</div>
 
 				<div>
@@ -144,8 +143,8 @@
 		</div>
 	</section>
 
-    <script src="js/fastclick.js"></script>
-    <script src="js/scroll.js"></script>
-    <script src="js/fixed-responsive-nav.js"></script>
+    <script src="/static/js/fastclick.js"></script>
+    <script src="/static/js/scroll.js"></script>
+    <script src="/static/js/fixed-responsive-nav.js"></script>
 </body>
 </html>
