--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
 					<p>
 						I built the redesigned careers website in order to increase the number of Yelp job applicants. With this application, users can search for jobs by location, department, or keywords, and apply using the Lever API.
 						<span>
-							<a href="http://www.yelp.com/careers/job-openings"> View On Yelp</a>
+							<a href="http://www.yelp.com/careers/job-openings" target="_blank"> View On Yelp</a>
 						</span>
 					</p>
 				</div>
@@ -117,7 +117,7 @@
 					<p>
 						During Yelp's 18th hackathon with a team of engineers, built an internal web app with an integrated IRC bot that allows Yelp employees to form groups and discover new lunch spots and people. A Yelp employee can create a new group to go to a specific lunch spot through either the web app or the IRC channel, and other employees can join these groups.
 						<span>
-							<a href="https://github.com/Sahil5/LunchShip"> View On Github</a>
+							<a href="https://github.com/Sahil5/LunchShip" target="_blank"> View On Github</a>
 						</span>
 					</p>
 
@@ -136,10 +136,10 @@
 			</p>
 
 			<ul>
-				<li><a href="#"><i class="fa fa-envelope"></i> Email</a></li>
-				<li><a href="#"><i class="fa fa-github"></i> Github</a></li>
-				<li><a href="#"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
-				<li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
+				<li><a href="mailto:stellaodewumi@gmail.com"><i class="fa fa-envelope"></i> Email</a></li>
+				<li><a href="https://github.com/sodewumi" target="_blank"><i class="fa fa-github"></i> Github</a></li>
+				<li><a href="https://www.linkedin.com/in/stellaodewumi" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
+				<li><a href="https://twitter.com/sodewumi" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
 			</ul>
 		</div>
 	</section>
