--- a/static/css/style.css
+++ b/static/css/style.css
@@ -151,6 +151,9 @@ section ~ section {
 	text-align: center;
 	line-height: 1.5em;
 }
+.description a {
+  color: #000;
+}
 
 /* ------------------------------------------
   WORK SECTION
