--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <body>
 	<header>
 		<div class="spacing spacing--nav">
-			<a href="#home" class="logo animation fade-up" data-scroll>Fullstack Engineer</a>
+			<a href="#home" class="logo animation fade-up" data-scroll>Software Engineer</a>
 
 			<nav class="nav-collapse animation fade-up">
 				<ul>
@@ -38,26 +38,32 @@
 	<section id="description" class="description">
 		<div class="spacing spacing--description">
 			<p class="blurb">
-				Hello! I'm Stella. I'm a software engineer who specializes in building full-stack and front-end applications.
+				Hello! I'm Stella. I'm a software engineer who specializes in
+				building full-stack and front-end applications.
 			</p>
 
 			<div class="columns columns--description">
 				<div>
 					<p>
-						During my studies at Wellesley college, I co-founded an online menswear company for fashionable men who had trouble finding affordable clothing. During this process, I taught myself web development and took programming classes to build the site. I realized I love web development because it enables me to express my creativity while solving technically challenging problems.
+						During my studies at Wellesley college, I co-founded an online menswear
+						company for fashionable men who had trouble finding affordable clothing.
+						During this process, I taught myself web development and took programming
+						classes to build the site. I realized I love web development because it
+						enables me to express my creativity while solving technically challenging problems.
 					</p>	
 				</div>
 				<div>
 					<p>
-						I am proficent in JavaScript, JQuery, Socket.IO, HTML5, CSS3, Bootstrap in the frontend, and  Python, Flask, Pyramid,  SQLAlchemy, SQLite in the backend.
+						I am proficent in JavaScript, JQuery, Socket.IO, HTML5, CSS3, Bootstrap
+						in the front-end, and  Python, Flask, Pyramid,  SQLAlchemy, SQLite in the back-end.
 					</p>
 					<p>
-						Want to learn more? Feel free to visit my Linkedin: here.
+						Want to learn more? Feel free to visit my Linkedin:
+						<a href="https://www.linkedin.com/in/stellaodewumi" target="_blank">
+						here
+						</a>.
 					</p>
 				</div>
-
-
-			
 		</div>
 	</section>
 
@@ -76,7 +82,9 @@
 						<em>Tech Stack: Python, Pyramid, Cheetah, HTML, SCSS</em>
 					</p>
 					<p>
-						I built the redesigned careers website in order to increase the number of Yelp job applicants. With this application, users can search for jobs by location, department, or keywords, and apply using the Lever API.
+						I built the redesigned careers website in order to increase the number of
+						Yelp job applicants. With this application, users can search for jobs by
+						location, department, or keywords, and apply using the Lever API.
 						<span>
 							<a href="http://www.yelp.com/careers/job-openings" target="_blank"> View On Yelp</a>
 						</span>
@@ -95,7 +103,14 @@
 						<em>Tech Stack: Python, Flask, HTML, CSS, JavaScript, Socket.IO, SQLAlchemy, SQLite</em>
 					</p>
 					<p>
-						Gutenhub is an app that allows for collaborative translation of literary works. When a user logs into Gutenhub, they are able to choose a book from some of the most popular novels on Project Gutenberg-- the oldest digital library that focuses on digitizing and archiving books. Along with the API data from GoodReads and Amazon Web Services, a description of the books is displayed to the user. Through the description page, the user can choose to work on a translation project independently or form groups with other members on Gutenhub, and together they can translate a work of literature into the language of their choice.
+						Gutenhub is an app that allows for collaborative translation of literary works.
+						When a user logs into Gutenhub, they are able to choose a book from some of
+						the most popular novels on Project Gutenberg&#8212;the oldest digital library
+						that focuses on digitizing and archiving books. Along with the API data from
+						GoodReads and Amazon Web Services, a description of the books is displayed to
+						the user. Through the description page, the user can choose to work on a
+						translation project independently or form groups with other members on Gutenhub,
+						and together they can translate a work of literature into the language of their choice.
 
 						<span>
 							<a href="https://github.com/sodewumi/gutenberg_translate" target="_blank"> View On Github</a>
@@ -115,7 +130,11 @@
 						<em>Tech Stack: Python, Flask, HTML, CSS, Bootstrap and SQLite.</em>
 					</p>
 					<p>
-						During Yelp's 18th hackathon with a team of engineers, built an internal web app with an integrated IRC bot that allows Yelp employees to form groups and discover new lunch spots and people. A Yelp employee can create a new group to go to a specific lunch spot through either the web app or the IRC channel, and other employees can join these groups.
+						During Yelp's 18th hackathon with a team of engineers, built an internal web
+						app with an integrated IRC bot that allows Yelp employees to form groups and
+						discover new lunch spots and people. A Yelp employee can create a new group
+						to go to a specific lunch spot through either the web app or the IRC channel,
+						and other employees can join these groups.
 						<span>
 							<a href="https://github.com/Sahil5/LunchShip" target="_blank"> View On Github</a>
 						</span>
@@ -132,7 +151,8 @@
 			<h2>Contact</h2>
 
 			<p>
-				Interested in working together? Want to stay in touch? Feel free to reach out at my email, stellaodewumi@gmail.com, or these other channels!
+				Interested in working together? Want to stay in touch? Feel free to reach out at my email,
+				stellaodewumi@gmail.com, or these other channels!
 			</p>
 
 			<ul>
