Fixed linkedin link

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,8 +60,7 @@
 					<p>
 						Want to learn more? Feel free to visit my Linkedin:
 						<a href="https://www.linkedin.com/in/stellaodewumi" target="_blank">
-						here
-						</a>.
+						here</a>.
 					</p>
 				</div>
 		</div>
