--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
 				</div>
 
 				<div>
-					<h3>Yelp Careers' Page</h3>
+					<h3>Yelp Careers Page</h3>
 					<p>
 						<em>Tech Stack: Python, Pyramid, Cheetah, HTML, SCSS</em>
 					</p>
