Updated the project descriptions

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,11 +45,10 @@
 			<div class="columns columns--description">
 				<div>
 					<p>
-						During my studies at Wellesley college, I co-founded an online menswear
-						company for fashionable men who had trouble finding affordable clothing.
-						During this process, I taught myself web development and took programming
-						classes to build the site. I realized I love web development because it
-						enables me to express my creativity while solving technically challenging problems.
+						During college, I co-founded an online menswear
+						company for fashion conscious men who had trouble finding affordable clothing.
+						Initially I taught myself how to code to build out the site and then began taking
+						classes when I realized I loved programming. 
 					</p>	
 				</div>
 				<div>
@@ -102,14 +101,12 @@
 						<em>Tech Stack: Python, Flask, HTML, CSS, JavaScript, Socket.IO, SQLAlchemy, SQLite</em>
 					</p>
 					<p>
-						Gutenhub is an app that allows for collaborative translation of literary works.
-						When a user logs into Gutenhub, they are able to choose a book from some of
+						Gutenhub is an app that allows for the collaborative translation of literary works.
+						When a user logs into Gutenhub, they are able to choose from some of
 						the most popular novels on Project Gutenberg&#8212;the oldest digital library
-						that focuses on digitizing and archiving books. Along with the API data from
-						GoodReads and Amazon Web Services, a description of the books is displayed to
-						the user. Through the description page, the user can choose to work on a
-						translation project independently or form groups with other members on Gutenhub,
-						and together they can translate a work of literature into the language of their choice.
+						that focuses on digitizing and archiving books. Users can choose to work on a
+						translation project independently or form groups with other members,
+						and together translate a work of literature into the language of their choice.
 
 						<span>
 							<a href="https://github.com/sodewumi/gutenberg_translate" target="_blank"> View On Github</a>
@@ -123,17 +120,13 @@
 					<img src="../static/img/lunchship.png">
 				</div>
 
-				<div>
+				<div>3
 					<h3>LunchShip</h3>
 					<p>
 						<em>Tech Stack: Python, Flask, HTML, CSS, Bootstrap and SQLite.</em>
 					</p>
 					<p>
-						During Yelp's 18th hackathon with a team of engineers, built an internal web
-						app with an integrated IRC bot that allows Yelp employees to form groups and
-						discover new lunch spots and people. A Yelp employee can create a new group
-						to go to a specific lunch spot through either the web app or the IRC channel,
-						and other employees can join these groups.
+						Built an internal web app with an integrated IRC bot during Yelp's 18th hackathon. Yelp employees can create new groups for different restaurants through either the LunchShip web app or IRC channel. Employees can then browse and join these departing lunch ships.
 						<span>
 							<a href="https://github.com/Sahil5/LunchShip" target="_blank"> View On Github</a>
 						</span>
